Add post method with privileges for admin role only

--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -7,8 +7,11 @@ swarm:
           security-domain: my-domain
         security-constraints:
           - url-pattern: /*
+            methods: [GET, POST, PUT, DELETE]
+            roles: [admin]
+          - url-pattern: /*
             methods: [GET]
-            roles: [admin, user]
+            roles: [user]
   security:
     security-domains:
       my-domain:
