--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -6,12 +6,22 @@ swarm:
           auth-method: BASIC
           security-domain: my-domain
         security-constraints:
-          - url-pattern: /*
-            methods: [GET, POST, PUT, DELETE]
-            roles: [admin]
-          - url-pattern: /*
+          - url-pattern: /
             methods: [GET]
-            roles: [user]
+            roles: [admin,user]
+          - url-pattern: /update/*
+            methods: [PUT]
+            roles: [admin,user]
+          - url-pattern: /move/
+            methods: [PUT]
+            roles: [admin]
+          - url-pattern: /user/*
+            methods: [POST, DELETE]
+            roles: [admin]
+          - url-pattern: /group/*
+            methods: [POST, DELETE]
+            roles: [admin]
+
   security:
     security-domains:
       my-domain:
