audit log created & hashing added

--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -32,6 +32,8 @@ swarm:
               flag: required
               module-options:
                 dsJndiName: java:jboss/datasources/usersdb
+                hashAlgorithm: SHA-256
+                hashEncoding: Hex
                 principalsQuery: SELECT PASSWORD FROM USERS WHERE USERNAME=? And DELETED = false
                 rolesQuery: SELECT ROLE, 'Roles' FROM USERS WHERE USERNAME=? And DELETED = false
   datasources:
