reset password by email feature added

--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -16,10 +16,10 @@ swarm:
             methods: [PUT]
             roles: [admin]
           - url-pattern: /user/*
-            methods: [POST, DELETE]
+            methods: [POST, DELETE, PUT]
             roles: [admin]
           - url-pattern: /group/*
-            methods: [POST, DELETE]
+            methods: [POST, DELETE, PUT]
             roles: [admin]
 
   security:
