integration tests added

--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -16,7 +16,7 @@ swarm:
             methods: [PUT]
             roles: [admin]
           - url-pattern: /user/*
-            methods: [POST, DELETE, PUT]
+            methods: [GET, POST, DELETE, PUT]
             roles: [admin]
           - url-pattern: /group/*
             methods: [POST, DELETE, PUT]
