--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <artifactId>jersey-client</artifactId>
             <version>2.25.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
