--- a/src/main/resources/project-defaults.yml
+++ b/src/main/resources/project-defaults.yml
@@ -21,6 +21,9 @@ swarm:
           - url-pattern: /group/*
             methods: [POST, DELETE, PUT]
             roles: [admin]
+          - url-pattern: /groups/
+            methods: [GET]
+            roles: [admin]
 
   security:
     security-domains:
